<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="2dp"
  android:background="#ededed"
  android:gravity="center_vertical"
  android:orientation="horizontal"
  android:padding="8dp">

  <ImageView
    android:id="@+id/itemImage"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:scaleType="fitCenter"
    android:src="@drawable/product_placeholder"
    tools:ignore="ContentDescription" />

  <TextView
    android:id="@+id/itemTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_weight="4"
    android:text="@string/product_title_placeholder" />

  <TextView
    android:id="@+id/itemPrice"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:text="@string/product_price_placeholder"
    android:textAlignment="textEnd"
    android:textColor="@color/black" />

  <TextView
    android:id="@+id/itemNbItems"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/product_quantity_placeholder"
    android:textAlignment="textEnd"
    android:textColor="@color/black" />

  <ImageButton
    android:id="@+id/itemTrash"
    android:layout_width="0dp"
    android:layout_height="24dp"
    android:layout_weight="1"
    android:background="@android:color/transparent"
    android:scaleType="fitCenter"
    android:src="@drawable/trash_icon"
    tools:ignore="ContentDescription" />
</LinearLayout>