<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <fragment
    android:id="@+id/menuFragment"
    android:name="griffith.baptiste.martinet.amaztwo.MenuFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="FragmentTagUsage" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/review_textview_title"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:textStyle="bold" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="3dp"
      android:orientation="vertical">

      <RatingBar
        android:id="@+id/reviewRatingBar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="#ffb300"
        android:rating="5"
        android:stepSize="1" />

      <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:hint="@string/review_edittext_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:minHeight="70dp"
        android:padding="10dp" />
    </LinearLayout>

    <Button
      android:id="@+id/reviewSendBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:text="@string/review_button_send" />
  </LinearLayout>
</LinearLayout>
